--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit==1.32.2
-joblib==1.3.2
-numpy==1.23.5
-librosa==0.10.1
-pydub==0.25.1
-scikit-learn==1.2.2
+streamlit
+joblib
+numpy
+librosa
+pydub
+scikit-learn
+ffmpeg-python
+soundfile
